// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Slider renders correctly > 01. with empty props 1`] = `
<div
  class="slider positionTop"
  data-testid="monday-slider"
>
  <div
    class="base small"
    data-testid="monday-slider__base"
  >
    <div
      class="rail small"
      data-testid="monday-slider__rail"
    >
      <div
        class="track"
      />
      <div
        class="filledTrack"
        style="left: 0%; width: 0%;"
      />
      <div
        aria-disabled="false"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        aria-valuetext="0%"
        class="thumb small notDisabledThumb"
        data-testid="monday-slider__thumb-0"
        role="slider"
        style="left: 0%;"
        tabindex="0"
      />
    </div>
  </div>
</div>
`;

exports[`Slider renders correctly > 02. with ariaLabel 1`] = `
<div
  class="slider positionTop"
  data-testid="monday-slider"
>
  <div
    class="base small"
    data-testid="monday-slider__base"
  >
    <div
      class="rail small"
      data-testid="monday-slider__rail"
    >
      <div
        class="track"
      />
      <div
        class="filledTrack"
        style="left: 0%; width: 0%;"
      />
      <div
        aria-disabled="false"
        aria-label="My Slider"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        aria-valuetext="0%"
        class="thumb small notDisabledThumb"
        data-testid="monday-slider__thumb-0"
        role="slider"
        style="left: 0%;"
        tabindex="0"
      />
    </div>
  </div>
</div>
`;

exports[`Slider renders correctly > 03. with ariaLabelledby 1`] = `
<div
  class="slider positionTop"
  data-testid="monday-slider"
>
  <div
    class="base small"
    data-testid="monday-slider__base"
  >
    <div
      class="rail small"
      data-testid="monday-slider__rail"
    >
      <div
        class="track"
      />
      <div
        class="filledTrack"
        style="left: 0%; width: 0%;"
      />
      <div
        aria-disabled="false"
        aria-labelledby="id-of-the-custom-label"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        aria-valuetext="0%"
        class="thumb small notDisabledThumb"
        data-testid="monday-slider__thumb-0"
        role="slider"
        style="left: 0%;"
        tabindex="0"
      />
    </div>
  </div>
</div>
`;

exports[`Slider renders correctly > 04. with custom className 1`] = `
<div
  class="slider positionTop slide-me"
  data-testid="monday-slider"
>
  <div
    class="base small"
    data-testid="monday-slider__base"
  >
    <div
      class="rail small"
      data-testid="monday-slider__rail"
    >
      <div
        class="track"
      />
      <div
        class="filledTrack"
        style="left: 0%; width: 0%;"
      />
      <div
        aria-disabled="false"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        aria-valuetext="0%"
        class="thumb small notDisabledThumb"
        data-testid="monday-slider__thumb-0"
        role="slider"
        style="left: 0%;"
        tabindex="0"
      />
    </div>
  </div>
</div>
`;

exports[`Slider renders correctly > 05. with id and data-testid 1`] = `
<div
  class="slider positionTop"
  data-testid="my-slider"
  id="my-slider"
>
  <div
    class="base small"
    data-testid="my-slider__base"
  >
    <div
      class="rail small"
      data-testid="my-slider__rail"
    >
      <div
        class="track"
      />
      <div
        class="filledTrack"
        style="left: 0%; width: 0%;"
      />
      <div
        aria-disabled="false"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        aria-valuetext="0%"
        class="thumb small notDisabledThumb"
        data-testid="my-slider__thumb-0"
        role="slider"
        style="left: 0%;"
        tabindex="0"
      />
    </div>
  </div>
</div>
`;

exports[`Slider renders correctly > 06. with disabled 1`] = `
<div
  class="slider positionTop"
  data-testid="monday-slider"
>
  <div
    class="base small disabled"
    data-testid="monday-slider__base"
  >
    <div
      class="rail small"
      data-testid="monday-slider__rail"
    >
      <div
        class="track"
      />
      <div
        class="filledTrack"
        style="left: 0%; width: 0%;"
      />
      <div
        aria-disabled="true"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        aria-valuetext="0%"
        class="thumb small"
        data-testid="monday-slider__thumb-0"
        role="slider"
        style="left: 0%;"
        tabindex="-1"
      />
    </div>
  </div>
</div>
`;

exports[`Slider renders correctly > 07. with color 1`] = `
<div
  class="slider positionTop"
  data-testid="monday-slider"
>
  <div
    class="base small positive"
    data-testid="monday-slider__base"
  >
    <div
      class="rail small"
      data-testid="monday-slider__rail"
    >
      <div
        class="track positive"
      />
      <div
        class="filledTrack positive"
        style="left: 0%; width: 0%;"
      />
      <div
        aria-disabled="false"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        aria-valuetext="0%"
        class="thumb positive small notDisabledThumb"
        data-testid="monday-slider__thumb-0"
        role="slider"
        style="left: 0%;"
        tabindex="0"
      />
    </div>
  </div>
</div>
`;

exports[`Slider renders correctly > 08. with size 1`] = `
<div
  class="slider positionTop"
  data-testid="monday-slider"
>
  <div
    class="base large"
    data-testid="monday-slider__base"
  >
    <div
      class="rail large"
      data-testid="monday-slider__rail"
    >
      <div
        class="track"
      />
      <div
        class="filledTrack"
        style="left: 0%; width: 0%;"
      />
      <div
        aria-disabled="false"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        aria-valuetext="0%"
        class="thumb large notDisabledThumb"
        data-testid="monday-slider__thumb-0"
        role="slider"
        style="left: 0%;"
        tabindex="0"
      />
    </div>
  </div>
</div>
`;

exports[`Slider renders correctly > 09. with min, max, and step 1`] = `
<div
  class="slider positionTop"
  data-testid="monday-slider"
>
  <div
    class="base small"
    data-testid="monday-slider__base"
  >
    <div
      class="rail small"
      data-testid="monday-slider__rail"
    >
      <div
        class="track"
      />
      <div
        class="filledTrack"
        style="left: 0%; width: 0%;"
      />
      <div
        aria-disabled="false"
        aria-valuemax="20"
        aria-valuemin="10"
        aria-valuenow="10"
        aria-valuetext="10%"
        class="thumb small notDisabledThumb"
        data-testid="monday-slider__thumb-0"
        role="slider"
        style="left: 0%;"
        tabindex="0"
      />
    </div>
  </div>
</div>
`;

exports[`Slider renders correctly > 10. with showValue 1`] = `
<div
  class="slider valueShown positionTop"
  data-testid="monday-slider"
>
  <div
    class="base small"
    data-testid="monday-slider__base"
  >
    <div
      class="rail small"
      data-testid="monday-slider__rail"
    >
      <div
        class="track"
      />
      <div
        class="filledTrack"
        style="left: 0%; width: 0%;"
      />
      <div
        aria-disabled="false"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        aria-valuetext="0%"
        class="thumb small notDisabledThumb"
        data-testid="monday-slider__thumb-0"
        role="slider"
        style="left: 0%;"
        tabindex="0"
      >
        <label
          class="label colorPrimary positionTop"
        >
          0%
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider renders correctly > 11. with valueFormatter 1`] = `
<div
  class="slider positionTop"
  data-testid="monday-slider"
>
  <div
    class="base small"
    data-testid="monday-slider__base"
  >
    <div
      class="rail small"
      data-testid="monday-slider__rail"
    >
      <div
        class="track"
      />
      <div
        class="filledTrack"
        style="left: 0%; width: 0%;"
      />
      <div
        aria-disabled="false"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        aria-valuetext="--0GB--"
        class="thumb small notDisabledThumb"
        data-testid="monday-slider__thumb-0"
        role="slider"
        style="left: 0%;"
        tabindex="0"
      />
    </div>
  </div>
</div>
`;

exports[`Slider renders correctly > 12. with value (controlled component) 1`] = `
<div
  class="slider positionTop"
  data-testid="monday-slider"
>
  <div
    class="base small"
    data-testid="monday-slider__base"
  >
    <div
      class="rail small"
      data-testid="monday-slider__rail"
    >
      <div
        class="track"
      />
      <div
        class="filledTrack"
        style="left: 0%; width: 12%;"
      />
      <div
        aria-disabled="false"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="12"
        aria-valuetext="12%"
        class="thumb small notDisabledThumb"
        data-testid="monday-slider__thumb-0"
        role="slider"
        style="left: 12%;"
        tabindex="0"
      />
    </div>
  </div>
</div>
`;

exports[`Slider renders correctly > 13. with value, valueText (controlled component) 1`] = `
<div
  class="slider positionTop"
  data-testid="monday-slider"
>
  <div
    class="base small"
    data-testid="monday-slider__base"
  >
    <div
      class="rail small"
      data-testid="monday-slider__rail"
    >
      <div
        class="track"
      />
      <div
        class="filledTrack"
        style="left: 0%; width: 15%;"
      />
      <div
        aria-disabled="false"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="15"
        aria-valuetext="15kg"
        class="thumb small notDisabledThumb"
        data-testid="monday-slider__thumb-0"
        role="slider"
        style="left: 15%;"
        tabindex="0"
      />
    </div>
  </div>
</div>
`;

exports[`Slider renders correctly > 14. with indicateSelection 1`] = `
<div
  class="slider positionTop"
  data-testid="monday-slider"
>
  <div
    class="base small"
    data-testid="monday-slider__base"
  >
    <div
      class="rail small"
      data-testid="monday-slider__rail"
    >
      <div
        class="track"
      />
      <div
        class="filledTrack"
        style="left: 0%; width: 0%;"
      />
      <div
        aria-disabled="false"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        aria-valuetext="0%"
        class="thumb small notDisabledThumb"
        data-testid="monday-slider__thumb-0"
        role="slider"
        style="left: 0%;"
        tabindex="0"
      />
    </div>
  </div>
  <div
    class="infix postfix"
    style="width: 60px;"
  >
    <div
      data-testid="mock-text-field-comp"
    >
      {"value":"0%","className":"selectionIndicator"}
    </div>
  </div>
</div>
`;

exports[`Slider renders correctly > 15. with prefix (string) and postfix (Icon) 1`] = `
<div
  class="slider positionTop"
  data-testid="monday-slider"
>
  <div
    class="infix prefix txt"
  >
    Vol
  </div>
  <div
    class="base small"
    data-testid="monday-slider__base"
  >
    <div
      class="rail small"
      data-testid="monday-slider__rail"
    >
      <div
        class="track"
      />
      <div
        class="filledTrack"
        style="left: 0%; width: 0%;"
      />
      <div
        aria-disabled="false"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        aria-valuetext="0%"
        class="thumb small notDisabledThumb"
        data-testid="monday-slider__thumb-0"
        role="slider"
        style="left: 0%;"
        tabindex="0"
      />
    </div>
  </div>
  <div
    class="infix postfix"
  >
    <div
      data-testid="mock-icon"
    >
      {"clickable":false,"iconSize":18,"ignoreFocusStyle":true,"icon":"Sound"}
    </div>
  </div>
</div>
`;

exports[`Slider renders correctly > 16. with prefix (custom) and postfix (render-props) 1`] = `
<div
  class="slider positionTop"
  data-testid="monday-slider"
>
  <div
    class="infix prefix"
  >
    <div>
      Custom component
    </div>
  </div>
  <div
    class="base small"
    data-testid="monday-slider__base"
  >
    <div
      class="rail small"
      data-testid="monday-slider__rail"
    >
      <div
        class="track"
      />
      <div
        class="filledTrack"
        style="left: 0%; width: 0%;"
      />
      <div
        aria-disabled="false"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        aria-valuetext="0%"
        class="thumb small notDisabledThumb"
        data-testid="monday-slider__thumb-0"
        role="slider"
        style="left: 0%;"
        tabindex="0"
      />
    </div>
  </div>
  <div
    class="infix postfix"
  >
    Render Props result: 0% (0)
  </div>
</div>
`;

exports[`Slider renders correctly > 17. with ranged (ranged slider) 1`] = `
<div
  class="slider positionTop"
  data-testid="monday-slider"
>
  <div
    class="base small"
    data-testid="monday-slider__base"
  >
    <div
      class="rail small"
      data-testid="monday-slider__rail"
    >
      <div
        class="track"
      />
      <div
        class="filledTrack"
        style="left: 0%; width: 100%;"
      />
      <div
        aria-disabled="false"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        aria-valuetext="0%"
        class="thumb small notDisabledThumb"
        data-testid="monday-slider__thumb-0"
        role="slider"
        style="left: 0%;"
        tabindex="0"
      />
      <div
        aria-disabled="false"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="100"
        aria-valuetext="100%"
        class="thumb small notDisabledThumb"
        data-testid="monday-slider__thumb-1"
        role="slider"
        style="left: 100%;"
        tabindex="0"
      />
    </div>
  </div>
</div>
`;

exports[`Slider renders correctly > 18. ranged slider with options 1`] = `
<div
  class="slider positionTop"
  data-testid="monday-slider"
>
  <div
    class="base small"
    data-testid="monday-slider__base"
  >
    <div
      class="rail small"
      data-testid="monday-slider__rail"
    >
      <div
        class="track"
      />
      <div
        class="filledTrack"
        style="left: 25%; width: 25%;"
      />
      <div
        aria-disabled="false"
        aria-valuemax="50"
        aria-valuemin="10"
        aria-valuenow="20"
        aria-valuetext="20%"
        class="thumb small notDisabledThumb"
        data-testid="monday-slider__thumb-0"
        role="slider"
        style="left: 25%;"
        tabindex="0"
      />
      <div
        aria-disabled="false"
        aria-valuemax="50"
        aria-valuemin="10"
        aria-valuenow="30"
        aria-valuetext="30%"
        class="thumb small notDisabledThumb"
        data-testid="monday-slider__thumb-1"
        role="slider"
        style="left: 50%;"
        tabindex="0"
      />
    </div>
  </div>
</div>
`;
